corrigido alteração de status

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/rafaelteste
+spring.datasource.url=jdbc:postgresql://localhost:5432/rafaeldb
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=postgres
 
 #Jpa
 spring.jpa.hibernate.ddl-auto=update
