Adicionado relacionamento das entidades e feature para visualizar imagem por projeto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 #Postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/rafaeldb
+spring.datasource.url=jdbc:postgresql://localhost:5432/rafaelteste
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=admin
 
 #Jpa
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 server.port=8091
+
+spring.datasource.hikari.auto-commit=false
